load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MCPIntegrationTests",
    srcs = glob(["**/*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
        "//previewsmcp/cli:previewsmcp",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_BINARY": "$(rlocationpath //previewsmcp/cli:previewsmcp)",
        "PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCLI",
        "@swiftpkg_swift_sdk//:MCP",
    ],
)
