load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsCLITests",
    size = "small",
    srcs = glob(
        ["**/*.swift"],
        # Locates list_tools_snapshot.json via #filePath, which resolves
        # to the sandbox path under Bazel. Re-enable once #filePath
        # fixtures are relocated through runfiles.
        exclude = ["ListToolsSnapshotTests.swift"],
    ),
    copts = [
        "-swift-version",
        "6",
    ],
    tags = ["local"],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCLI",
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsEngine",
        "//previewsmcp/PreviewsMacOS",
        "//previewsmcp/Tests/TestSupport",
        "@swiftpkg_swift_argument_parser//:ArgumentParser",
        "@swiftpkg_swift_sdk//:MCP",
    ],
)
