load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsEngineTests",
    srcs = glob(["**/*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    tags = ["local"],
    visibility = ["//visibility:public"],
    deps = ["//previewsmcp/PreviewsEngine"],
)
