load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsIOSTests",
    srcs = glob(["**/*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    data = ["//:ios_jit_resources"],
    env = {"PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)"},
    tags = ["local"],
    visibility = ["//visibility:public"],
    deps = ["//previewsmcp/PreviewsIOS"],
)
