load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsIOSTests",
    timeout = "long",
    srcs = glob(["**/*.swift"]),
    copts = [
        "-swift-version",
        "6",
    ],
    data = ["//:ios_jit_resources"],
    env = {"PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)"},
    tags = [
        "integration",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsIOS",
        "//previewsmcp/Tests/TestSupport",
    ],
)
