load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsJITLinkTests",
    srcs = glob(
        ["**/*.swift"],
        exclude = [
            # Fixtures are compiled at runtime by the tests, not test sources.
            "Fixtures/**",
            # The iOS end-to-end suite is its own (slow, simulator-driven) target.
            "IOSPreviewE2ETests.swift",
        ],
    ),
    copts = ["-swift-version", "6"],
    data = [
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsJITLink",
    ],
)

swift_test(
    name = "IOSPreviewE2ETests",
    srcs = ["IOSPreviewE2ETests.swift"],
    copts = ["-swift-version", "6"],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsIOS",
        "//previewsmcp/PreviewsJITLink",
    ],
)
