load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsJITLinkTests",
    timeout = "long",
    srcs = glob(
        ["**/*.swift"],
        exclude = [
            # Fixtures are compiled at runtime by the tests, not test sources.
            "Fixtures/**",
            # The iOS end-to-end suite is its own (slow, simulator-driven) target.
            "IOSPreviewE2ETests.swift",
            # The event-pump probe runs in its own target so its async run-loop
            # poll isn't starved by these suites' concurrent agent spawns (#262).
            "EventPumpTests.swift",
        ],
    ),
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsJITLink",
    ],
)

# The agent AppKit event-pump probe, isolated into its own binary so its async
# event-dequeue poll runs without the in-process contention from the JITLink
# suites' concurrent agent spawns (the #262/#368 load flake). Shares
# FixtureSupport.swift with the main target (compiled into both).
swift_test(
    name = "EventPumpTests",
    size = "small",
    srcs = [
        "EventPumpTests.swift",
        "FixtureSupport.swift",
    ],
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsJITLink",
    ],
)

swift_test(
    name = "IOSPreviewE2ETests",
    timeout = "eternal",
    srcs = ["IOSPreviewE2ETests.swift"],
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsIOS",
        "//previewsmcp/PreviewsJITLink",
        "//previewsmcp/Tests/TestSupport",
    ],
)
