load("@rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "PreviewsJITLinkTests",
    timeout = "long",
    srcs = glob(
        ["**/*.swift"],
        exclude = [
            # Fixtures are compiled at runtime by the tests, not test sources.
            "Fixtures/**",
            # The iOS end-to-end suite is its own (slow, simulator-driven) target.
            "IOSPreviewE2ETests.swift",
        ],
    ),
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        # #391: the CI runner is a gui/501 LaunchAgent (genuinely gui-capable), so tell the
        # spawned macOS PreviewAgent to enter [NSApp run] even when its CGSession read comes
        # back null under load — a TRUE assertion here, not masking. The test process's env is
        # inherited by its posix_spawn'd agent. A non-gui host would fail these tests either way.
        "PREVIEWSMCP_GUI_CAPABLE": "1",
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "integration",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsJITLink",
    ],
)

swift_test(
    name = "IOSPreviewE2ETests",
    timeout = "eternal",
    srcs = ["IOSPreviewE2ETests.swift"],
    copts = [
        "-swift-version",
        "6",
    ],
    data = [
        "//:ios_jit_resources",
        "//:orc_rt_archive",
        "//previewsmcp/PreviewAgent",
    ],
    env = {
        "PREVIEWSMCP_AGENT": "$(rlocationpath //previewsmcp/PreviewAgent)",
        "PREVIEWSMCP_IOS_JIT_DIR": "$(rlocationpath //:ios_jit_resources)",
        "PREVIEWSMCP_ORC_RT": "$(rlocationpath //:orc_rt_archive)",
    },
    tags = [
        "exclusive",
        "integration",
        "local",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//previewsmcp/PreviewsCore",
        "//previewsmcp/PreviewsIOS",
        "//previewsmcp/PreviewsJITLink",
        "//previewsmcp/Tests/TestSupport",
    ],
)
